Fix white space

--- a/style/style_main.css
+++ b/style/style_main.css
@@ -88,7 +88,7 @@ h2 {
     line-height: normal;
 	font-weight: normal;
 	padding: 0;
-    margin: 0.7rem 0 0.6rem 0;
+    margin: 1rem 0 0.6rem 0;
 }
 h3 {
 	font-size: 0.9rem;
